--- a/css/navigation.css
+++ b/css/navigation.css
@@ -14,6 +14,12 @@
   flex-direction: column;
   text-decoration: none;
   color: #c1c1c1;
+  cursor: pointer;
+  transition: transform .3s linear;
+}
+
+.tab-bar .tab-bar__tab:hover {
+  transform: scale(1,1);
 }
 .tab-bar .tab-bar__tab i{
   display: block;
