--- a/css/chats.css
+++ b/css/chats.css
@@ -14,6 +14,7 @@
 
 .chats__chat .chat__content img{
   width: 50px;
+  height: 45px;
   border-radius: 50%;
   margin-right: 15px;
 }
@@ -54,4 +55,14 @@
   font-size: 25px;
   color: #523737;
   box-shadow: 0px 3px 10px rgb(0,0,0,0.2);
+  cursor: pointer;
+  transition: color .3s, background .5s ease-in-out;
+
+}
+
+.chat-btn:hover {
+  color: white;
+  background: #523737;
+  font-size: 20px;
+  transform: rotateY(1turn);
 }
